--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COVID-19 Probability</title>
+    <title>COVID-19 Probability of death and recovery</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -74,6 +74,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-    <script src="./recovery-and-death.js"></script>
+    <script src="./recovery-and-death.js?v=0.0.1"></script>
   </body>
 </html>
