js version update

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Probabilitie of death and recovery from Coronavirus disease (COVID-19) if anyone gets infected.">
-    <title>Probabilitie of death and recovery from COVID-19</title>
+    <meta name="description" content="Probabilities of death and recovery from Coronavirus disease (COVID-19) if anyone gets infected.">
+    <title>Probabilities of death and recovery from COVID-19</title>
     <link rel="stylesheet" href="./style.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,7 +25,7 @@
   <body>
     <div id="recovery-and-death" class="container">
       <h3 class="title text-center mt-4">
-        <span class="text-nowrap">Chance of death/recovery</span>
+        <span class="text-nowrap">Probabilities of death & recovery</span>
         <span class="text-nowrap">from COVID-19 in India</span>
       </h3>
 
@@ -93,6 +93,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-    <script src="./recovery-and-death.js?v=0.0.2"></script>
+    <script src="./recovery-and-death.js?v=0.0.3"></script>
   </body>
 </html>
