--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Probabilities of death and recovery from Coronavirus disease (COVID-19) if anyone gets infected.">
+    <meta property="og:image" content="./assets/covid19-india-og.png" />
     <title>Probabilities of death and recovery from COVID-19</title>
     <link rel="stylesheet" href="./style.css" />
 
