connected to API data

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <div id="recovery-and-death" class="container">
+      
+      <!-- <p>{{ records }}</p> -->
+
       <h3 class="title text-center mt-4">
         <span class="text-nowrap">Probabilities of death & recovery</span>
         <span class="text-nowrap">from COVID-19 in India</span>
@@ -115,6 +118,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-    <script src="./recovery-and-death.js?v=0.0.5"></script>
+    <script src="./recovery-and-death.js?v=0.1.0"></script>
   </body>
 </html>
